--- a/style.scss
+++ b/style.scss
@@ -9,11 +9,13 @@
     2.3    Post Navigation
     2.4    Page Navigation Menus
     2.5    Top Page Nav
+    2.6    Search Toggle
 3    Content
     3.1    Containers
     3.2    Headings
     3.3    Text
         3.3.1   Lists
+        3.3.2   Photo Credits
     3.4    Images
     3.5    Blog
 4   Footer
@@ -53,7 +55,19 @@ a {
 a:hover .banner-logo img {
     opacity: 0.7;
 }
+
 button,
+button[disabled]:hover,
+button[disabled]:focus,
+input[type="button"],
+input[type="button"][disabled]:hover,
+input[type="button"][disabled]:focus,
+input[type="reset"],
+input[type="reset"][disabled]:hover,
+input[type="reset"][disabled]:focus,
+input[type="submit"],
+input[type="submit"][disabled]:hover,
+input[type="submit"][disabled]:focus,
 .btn,
 a .btn,
 .elementor-tab-title {
@@ -395,7 +409,74 @@ a.more-link {
     right: 100%;
     width: 9600px;
 }
+@media screen and (max-width: 720px) {
+    .top-nav {
+        padding: 0.5em $margin-7;
+        margin-left: $margin-7;
+        line-height: 3;
+    }
+}
 
+/* 2.6 Header search */
+
+.search-toggle {
+    float: right;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin-right: 0;
+    color: $green;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1.2em;
+    border: 3px solid $green;
+    border-radius: 50%;
+}
+
+.search-toggle:hover,
+.search-toggle.active {
+    color: $lightgrey;
+    border-color: $lightgrey;
+}
+
+.search-toggle .screen-reader-text {
+    top: 0;
+    right: 0;
+}
+.search-box-wrapper {
+    z-index: 110000;
+    width: 100%;
+    margin-top: -1.75em;
+}
+.search-box {
+    padding: 1em;
+    background: $darkgrey;
+}
+
+.search-box .search-field {
+    max-width: 362px;
+    float: right;
+    padding: 1rem 2rem;
+    font-size: 20px;
+    font-size: 1rem;
+    background-color: #fff;
+    border: 0;
+}
+
+.hide { display: none; }
+
+.error404 .search-submit,
+.search .search-submit,
+.search-box .search-submit { display: none; }
+
+@media screen and (max-width: 600px) {
+    .search-toggle {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin-right: 0;
+    }
+}
 .anchor {
     margin-top: 1em;
 }
@@ -577,6 +658,12 @@ p.post-authors {
     margin: 0;
 }
 
+/* 3.3.2    Photo credits */
+.photo-credits {
+    font-size: 0.75em;
+    color: $midblue;
+}
+
 /* 3.4    Images */
 .post-thumbnail {
     margin-top: -1.75em;
@@ -681,6 +768,9 @@ p.post-authors {
         padding: 1em;
         background: white;
     }
+    .gform_wrapper .gform_body {
+        margin-left: -0.5em;
+    }
     input.gform_button.button {
         position: absolute;
         bottom: 0;
@@ -774,14 +864,29 @@ body:not(.search-results) article:not(.type-page) .entry-footer {
     background: $paleblue;
     padding: 4.5455% 4.5455% 10%;
     text-align: center;
-
     p {
         margin-bottom: 0.5em;
         line-height: 1.2;
     }
-
     .quote {
         font-size: 1.5em;
+    }
+    blockquote {
+        color: $darkblue;
+        p {
+            padding-top: 30px;
+            text-align: left;
+            line-height: 1.4;
+        }
+        .open-quote {
+            font-size: 5em;
+            float: left;
+            margin-right: 15px;
+            margin-top: -30px;
+        }
+        .close-quote {
+            display: none;
+        }
     }
 }
 .site-footer a:link,
@@ -881,15 +986,17 @@ ul.footer-menu {
             order: 0;
 }
 .site-details {
-    /* -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2; */
     margin-top: 3em;
 }
-span.footer-contacts {
-    /* -webkit-box-ordinal-group: 3;
-        -ms-flex-order: 2;
-            order: 2; */
+.footer-info a img {
+    float: left;
+    width: 160px;
+    margin-right: 10px;
+}
+.site-info {
+    position: relative;
+    z-index: 30;
+    color: white;
 }
 /*--------------------------------------------------------------
 5    Widgets
@@ -941,7 +1048,7 @@ a#scrollup:hover {
 
     a#scrollup {
         font-size: 22px;
-        padding: 3px;
+        padding: 0 5px;
         bottom: 20px;
     }
 
