--- a/style.scss
+++ b/style.scss
@@ -446,7 +446,6 @@ a.more-link {
 .search-box-wrapper {
     z-index: 110000;
     width: 100%;
-    margin-top: -1.75em;
 }
 .search-box {
     padding: 1em;
@@ -461,6 +460,7 @@ a.more-link {
     font-size: 1rem;
     background-color: #fff;
     border: 0;
+    font-family: $main-font;
 }
 
 .hide { display: none; }
