search wrapper moved

--- a/style.scss
+++ b/style.scss
@@ -446,6 +446,7 @@ a.more-link {
 .search-box-wrapper {
     z-index: 110000;
     width: 100%;
+    margin-top: 0;
 }
 .search-box {
     padding: 1em;
