--- a/style.scss
+++ b/style.scss
@@ -624,7 +624,9 @@ h1, h2, h3, h4, h5, h6,
     font-family: 'Aller', arial, sans-serif;
     font-weight: 300;
 }
-
+h1.home-post-title {
+    min-height: 80px;
+}
 h1.entry-title,
 .comments-title,
 .comment-reply-title {
@@ -726,6 +728,21 @@ p.post-authors {
 .post-thumbnail img {
     width: 100vw;
     z-index: 1;
+}
+@media screen and (min-width: 1560px) {
+    .post-thumbnail {
+        max-height: 600px;
+    }
+}
+@media screen and (min-width: 1680px) {
+    .post-thumbnail {
+        max-height: 660px;
+    }
+}
+@media screen and (min-width: 2080px) {
+    .post-thumbnail {
+        max-height: 840px;
+    }
 }
 @media screen and (min-width: 960px) and (max-width: 1380px) {
     .post-thumbnail {
