--- a/home-style.scss
+++ b/home-style.scss
@@ -132,7 +132,7 @@ section {
         }
     }
     .home-box > * {
-        // -webkit-box-flex: 1;
+        /* -webkit-box-flex: 1;*/
         /*     -ms-flex: 1 1 100%;*/
         /*         flex: 1 1 100%;*/
     }
@@ -143,7 +143,7 @@ section {
 article.home-box a.more-link {
             display: none;
 }
-@media  screen and (max-width: 700px) {
+@media  screen and (max-width: 909px) {
     .news-boxes {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
