--- a/hsr.scss
+++ b/hsr.scss
@@ -461,6 +461,12 @@ a.more-link {
     border-radius: 50%;
 }
 
+@media screen and (min-width: 700px) and (max-width: 909px) {
+    .search-toggle {
+        margin-top: 0;
+    }
+}
+
 .search-toggle:hover,
 .search-toggle.active {
     color: $lightgrey;
@@ -498,7 +504,7 @@ a.more-link {
 .search .search-submit,
 .search-box .search-submit { display: none; }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 699px) {
     .search-toggle {
         position: absolute;
         top: 0;
@@ -581,10 +587,15 @@ section.testimonials {
     bottom: 0;
     left: 0;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 909px) {
     .header-badge {
         width: 100%;
         margin-top: 1em;
+    }
+}
+@media screen and  (min-width: 660px) and (max-width: 908px) {
+    .header-badge {
+        margin-top: 0;
     }
 }
 
@@ -745,7 +756,7 @@ p.post-authors {
         font-size: 1.8em;
     }
 }
-@media screen and ( max-width: 600px ) {
+@media screen and ( max-width: 909px ) {
     .post-thumbnail {
         margin-left: -7.6923%;
         margin-right: -7.6923%;
@@ -901,7 +912,38 @@ body:not(.search-results) article:not(.type-page) .entry-footer {
     font-family: $main-font;
     font-weight: 300;
 }
-
+@media screen and (max-width: 910px) {
+    .blog article {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        .blog-thumb {
+            width: 100%;
+            img {
+                width: 100%;
+            }
+            .posted-on {
+                text-align: left;
+                padding-left: $margin-7;
+                margin-bottom: 1em;
+            }
+            span.cat-links,
+            span.comments-link {
+                display: inline-block;
+                margin-right: 1em;
+                margin-bottom: 1em;
+            }
+            span.cat-links {
+                margin-left: $margin-7;
+            }
+        }
+        .entry-content p {
+            margin-right: $margin-7;
+            padding-right: $margin-7;
+        }
+    }
+}
 
 /*--------------------------------------------------------------
 4    Footer
