--- a/hsr.scss
+++ b/hsr.scss
@@ -213,17 +213,8 @@ a.more-link {
 .main-navigation {
     font-family: $main-font;
 }
-.main-navigation ul {
-    list-style: none;
-    margin: 0;
-}
-.main-navigation li {
-    position: relative;
-}
-
 .main-navigation a {
     color: $darkgrey;
-    display: block;
 }
 .main-navigation .primary-menu a:hover,
 .main-navigation .primary-menu a:focus,
@@ -235,6 +226,7 @@ a.more-link {
 .main-navigation .current-menu-ancestor > a {
     font-weight: 300;
     color: $green;
+    position: relative;
 }
 .main-navigation .menu-item-has-children > a {
     padding-right: 0.875em;
@@ -291,12 +283,7 @@ a.more-link {
     }
 }
 .main-navigation ul.sub-menu {
-    top: 42px;
-    margin-top: 2px;
-    border-bottom: none;
-}
-.main-navigation .sub-menu li {
-    border: none;
+     border-top: 2px solid $green;
 }
 
 /* 2.2    Social navigation */
