--- a/hsr.scss
+++ b/hsr.scss
@@ -49,7 +49,8 @@ body {
 /*--------------------------------------------------------------
 1    Links
 --------------------------------------------------------------*/
-a {
+a,
+a:after {
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
 }
