--- a/home-style.scss
+++ b/home-style.scss
@@ -81,6 +81,7 @@ section {
     }
 }
 .home-news {
+    display: table;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -88,6 +89,12 @@ section {
         -ms-flex-pack: justify;
             justify-content: space-between;
     margin-bottom: 1em;
+}
+.home-news:after {
+    content: '';
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    clear: both;
 }
 .news-boxes {
     display: -webkit-box;
@@ -102,6 +109,8 @@ section {
         padding: 1em;
         margin: 1em;
         margin-bottom: 1em;
+        float: left;
+        width: 31%;
         -webkit-box-flex: 1;
             -ms-flex: 1;
                 flex: 1;
