--- a/home-style.scss
+++ b/home-style.scss
@@ -21,6 +21,11 @@
         }
     }
 }
+@media screen and (max-width: 500px) {
+    .social-navigation li {
+        margin: 2px;
+    }
+}
 
 .home .breadcrumbs {
     display: none;
@@ -173,6 +178,12 @@ article.home-box a.more-link {
         width: 100%;
         float: none;
         padding: 0;
+    }
+}
+@media  screen and (max-width: 600px) {
+    .news-boxes .home-box {
+        width: 100%;
+        margin-left: 0;
     }
 }
 /*--------------------------------------------------------------
