--- a/home-style.scss
+++ b/home-style.scss
@@ -71,17 +71,20 @@ section {
 
     .cta-box {
         border: 1px solid $green;
-        padding: 1em;
+        padding: 1em 1em 2em;
         margin-bottom: 1em;
 
         .home-cta-title {
             text-transform: uppercase;
             font-weight: 700;
             color: $darkblue;
+            line-height: 1;
 }
 
         p {
             max-width: 50%;
+            line-height: 1.3;
+            margin-top: 0.5em;
         }
     }
 }
