--- a/hsr.scss
+++ b/hsr.scss
@@ -593,6 +593,7 @@ h1, h2, h3, h4, h5, h6,
     font-weight: 300;
 }
 h1.entry-title,
+h2.entry-title,
 .comments-title,
 .comment-reply-title,
 .page-header .page-title {
