--- a/hsr.scss
+++ b/hsr.scss
@@ -24,6 +24,8 @@
     5.1     Metaslider
 6   Elementor
 7   Scrollup
+8   Events Calendar
+9   Keynote Speakers
 --------------------------------------------------------------*/
 
 html, body {
@@ -634,6 +636,9 @@ h2.home-post-title {
 .single .entry-title:after {
     display: none;
 }
+.single.single-speakers .entry-title:after {
+    display: block;
+}
 .entry-content h4 {
     letter-spacing: 0 !important;
 }
@@ -1231,4 +1236,132 @@ a.tribe-event-url {
 }
 .tribe-events-photo .tribe-events-loop .type-tribe_events .tribe-events-event-meta {
     color: white;
+}
+/*-----------------------------------------
+9   Keynote Speakers 
+-----------------------------------------*/
+.the-speakers {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 3.5em;
+    .speaker {
+        border: 1px solid $green;
+        padding: 1em;
+        -webkit-box-flex: 1;
+            -ms-flex-positive: 1;
+                flex-grow: 1;
+        max-width: calc(100% * (1/3) - 1rem - 1px);
+        margin-bottom: 2em;
+        margin-left: 1em;
+        position: relative;
+        .speakers-thumb {
+            margin: -1em -1em 0.5em;
+            a img {
+                width: 100%;
+            }
+            a img:hover {
+                opacity: 0.9;
+            }
+        }
+    }
+}
+.the-speakers:after {
+    content: '';
+    -webkit-box-flex: 1;
+        -ms-flex: auto;
+            flex: auto;
+}
+.speaker-text { 
+    .entry-header {
+        padding-bottom: 2em;
+    }
+    a.button {
+        position: absolute;
+        left: -1px;
+        bottom: -1.25em;
+        width: 50%;
+    }
+}
+
+
+/* single page */
+.speakers {
+    .single-speakers-thumb {
+        border: 1px solid $green;
+        float: left;
+        max-width: 300px;
+        margin: 0 2rem 2rem 0;
+    }
+    .plenary {
+        background: $palegrey;
+        padding: 1em;
+        margin-bottom: 2em;
+    }
+    .entry-content { margin-bottom: 3.5em; }
+}
+.speakers-info {
+    display: inline-block;
+    float: right;
+    width: calc(100% - 300px - 2em);
+    .entry-title:before {
+        border-bottom: none;
+    }
+    .details {
+        background: $lightgrey;
+        color: white;
+        padding: 1em 2em;
+        position: relative;
+        a {
+            color: $darkgrey;
+        }
+    }
+    .details:after {
+        content: '';
+        border-top: 20px solid $lightgrey;
+        border-right: 20px solid transparent;
+        border-left: 20px solid transparent;
+        position: absolute;
+        bottom: -20px;
+        left: calc(10% - 20px);
+    }
+    p {
+        font-size: 23px;
+        font-size: 1.4375rem;
+        line-height: 1.2173913043;
+        margin: 0 0 1.2173913043em 0;
+        span.the-label {
+            width: 145px;
+            display: table-cell;
+            white-space: nowrap;
+        }
+        span.the-field {
+            display: table-cell;
+        }
+    }
+    p:last-child { margin-bottom: 0; }
+    .speakers-bio { clear: both; }
+}
+
+/* archive for speakers */
+.archive article.speakers {
+    .blog-thumb img {
+        border: 1px solid $green;
+    }
+    .entry-title a:link {
+        font-weight: bold;
+    }
+    span {
+        width: 145px;
+        display: inline-block;
+    }
+    a.button {
+        width: 20%;
+        display: inline-block;
+    }
 }
