--- a/hsr.scss
+++ b/hsr.scss
@@ -1262,11 +1262,47 @@ a.tribe-event-url {
         position: relative;
         .speakers-thumb {
             margin: -1em -1em 0.5em;
+            position: relative;
+            overflow: hidden; /* new */
+            text-align: center; /* new */
+            display: block; /* new */
             a img {
                 width: 100%;
             }
-            a img:hover {
-                opacity: 0.9;
+            a { color: white; }
+            a:hover { color: $green; }
+            .link-mask { /* new */
+                opacity: 0;
+                -webkit-transform: scale(0.7);
+                        transform: scale(0.7);
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                overflow: hidden;
+                background: rgba(35, 40, 45, 0.6);
+                color: white;
+                -webkit-transition: all .2s ease-in-out;
+                transition: all .2s ease-in-out;
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-orient: vertical;
+                -webkit-box-direction: normal;
+                    -ms-flex-direction: column;
+                        flex-direction: column;
+                -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                        justify-content: center;
+                i { font-size: 6em; }
+
+            }
+            .link-mask:hover {
+                opacity: 1;
+                -webkit-transform: scale(1);
+                        transform: scale(1);
+
             }
         }
     }
